# lanty-core

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  core-library.pro  core.pro
configuration/doxygen/: doxygen_external.doxyfile  doxygen_internal.doxyfile
documentation/: CMakeLists.txt  doxygen.doxyfile.in
project/: CMakeLists.txt  project.pro
project/include/core/: FileExtension.hpp  JSONLoadable.hpp  JSONSerializable.hpp  Serializable.hpp  YAMLLoadable.hpp  YAMLSerializable.hpp  ltycore_global.hpp  version.hpp  version.hpp.in
project/include/game/: Game.hpp  GameClient.hpp  GameClientLoader.hpp  GameImage.hpp  GameLoader.hpp  GameServer.hpp  GameServerLoader.hpp  GameVersion.hpp  GameVersionLoader.hpp  GameVersionSource.hpp  Game_temp.hpp  Gamelist.hpp  GamelistFactory.hpp  IGame.hpp  QGame.hpp  QGamelist.hpp  QGamelistFactory.hpp  QGamelistLoader.hpp
project/include/helper/: GameHelper.hpp
project/include/logging/: LogLevel.hpp  Logger.hpp
project/include/network/: Connection.hpp  NetworkHelper.hpp
project/include/network/exploration/: HostExploration.hpp  HostExplorer.hpp  HostExposer.hpp
project/include/network/message/: AddressMessage.hpp  GameDownloadReply.hpp  GameDownloadRequest.hpp  GamelistMessage.hpp  Message.hpp  MessageLoader.hpp  MessageType.hpp  UserMessage.hpp
project/include/serializer/: Serializable.hpp
project/include/system/: FileExtension.hpp  QDirAdapter.hpp  QPixmapAdapter.hpp
project/include/user/: QUser.hpp  QUserlist.hpp  User.hpp  UserLoader.hpp  Userlist.hpp
project/include/yaml/: IYamlNode.hpp  YamlNode.hpp
project/source/core/: FileExtension.cpp
project/source/game/: Game.cpp  GameClient.cpp  GameClientLoader.cpp  GameImage.cpp  GameLoader.cpp  GameServer.cpp  GameServerLoader.cpp  GameVersion.cpp  GameVersionLoader.cpp  Game_temp.cpp  Gamelist.cpp  GamelistFactory.cpp  QGame.cpp  QGamelist.cpp  QGamelistFactory.cpp  QGamelistLoader.cpp
project/source/helper/: GameHelper.cpp
project/source/logging/: Logger.cpp
project/source/network/: Connection.cpp  NetworkHelper.cpp
project/source/network/exploration/: HostExplorer.cpp  HostExposer.cpp
project/source/network/message/: AddressMessage.cpp  GameDownloadReply.cpp  GameDownloadRequest.cpp  GamelistMessage.cpp  Message.cpp  MessageLoader.cpp  MessageType.cpp  UserMessage.cpp
project/source/serializer/: Serializable.cpp
project/source/system/: FileExtension.cpp  QDirAdapter.cpp  QPixmapAdapter.cpp
project/source/user/: QUser.cpp  QUserlist.cpp  User.cpp  UserLoader.cpp  Userlist.cpp
project/source/yaml/: YamlNode.cpp
project/src/core/: version.hpp
project/src/game/: Game.cpp  Game.hpp  GameList.hpp  Gamelist.cpp  GamelistFactory.cpp
project/src/helper/: GameHelper.cpp  IGameHelper.cpp
project/src/logging/: Logger.cpp
project/src/system/: FileExtension.cpp  QDirAdapter.cpp  QPixmapAdapter.cpp
project/src/yaml/: YamlNode.cpp
resource/: core.qrc  core.rc  style.qrc
resource/translation/: core_de_DE.ts
resource/xcf/: add_plus_128x128.xcf  ban_128x128.xcf  icon_256x256.xcf  logo_256x256.xcf  logo_font_256x320.xcf  search_glass_128x128.xcf  trash_delete_128x128.xcf
src/core/: ltycore_global.hpp
src/game/: Game.cpp  Game.hpp  GameVersion.cpp  GameVersion.hpp  game.cpp  gamelist.cpp  version.cpp
src/include/: game.h  gamelist.h  ltycore.h  ltycore.hpp  ltycore_global.h  setting.h  version.h
src/setting/: Setting.hpp  setting.cpp
test/: CMakeLists.txt  test.pro
test/include/core/: JSONLoadableTest.hpp  YAMLLoadableTest.hpp
test/include/game/: GameClientLoaderTest.hpp  GameLoaderTest.hpp  GameServerLoaderTest.hpp  GameTest.hpp  GameVersionLoaderTest.hpp  GamelistFactoryTest.hpp
test/include/helper/: GameHelperTest.hpp  QStringPrintHelper.hpp
test/include/mock/: MockGame.hpp  MockGameHelper.hpp  MockQDir.hpp  MockQPixmap.hpp  MockUser.hpp  MockYamlNode.hpp
test/include/user/: UserLoaderTest.hpp
test/include/yaml/: YamlNodeTest.hpp
test/source/core/: FileExtensionTest.cpp  JSONLoadableTest.cpp  YAMLLoadableTest.cpp  main.cpp
test/source/game/: GameClientLoaderTest.cpp  GameClientTest.cpp  GameImageTest.cpp  GameLoaderTest.cpp  GameServerLoaderTest.cpp  GameServerTest.cpp  GameTest.cpp  GameTest_frwq.cpp  GameVersionLoaderTest.cpp  GameVersionTest.cpp  GamelistTest.cpp  QGameTest.cpp  QGamelistTest.cpp
test/source/helper/: GameHelperTest.cpp
test/source/serializer/: SerializerTest.cpp
test/source/user/: QUserTest.cpp  QUserlistTest.cpp  UserLoaderTest.cpp  UserTest.cpp  UserlistTest.cpp
test/src/core/: main.cpp
test/src/game/: GameTest.cpp  GamelistFactoryTest.cpp
test/src/helper/: GameHelperTest.cpp
test/src/yaml/: YamlNodeTest.cpp
